fix(visible search result): fix search result visible for click

--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -1159,6 +1159,13 @@
       background-color: var(--color-success);
     }
   }
+  .hover\:visible {
+    &:hover {
+      @media (hover: hover) {
+        visibility: visible;
+      }
+    }
+  }
   .hover\:bg-primary {
     &:hover {
       @media (hover: hover) {
